use native node module sample, serial port

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start": "gulp dev",
     "build-components": "gulp prod",
     "build-electron": "electron-packager ./ sample_app --platform=darwin --arch=x64 --version=0.36.1 --overwrite",
-    "build": "npm run build-components && npm run build-electron"
+    "build": "npm run build-components && npm run build-electron",
+    "postinstall": "cd node_modules/serialport && ./node_modules/.bin/node-pre-gyp rebuild --target=1.3.2 --arch=x64 --dist-url=https://atom.io/download/atom-shell"
   },
   "author": "sasaki-seiya",
   "license": "MIT",
   "dependencies": {
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "serialport": "^4.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
