--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "dependencies": {
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.6.1",
+    "react-router-redux": "^4.0.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "serialport": "^4.0.1"
   },
   "devDependencies": {
@@ -22,6 +27,7 @@
     "babel-plugin-transform-react-jsx": "^6.8.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "electron-connect": "^0.4.2",
@@ -39,6 +45,7 @@
   "babel": {
     "presets": [
       "es2015",
+      "stage-0",
       "react"
     ]
   }
